[metadata]
name = awc
version = attr: awc.__version__
author = Ari Archer
author_email = ari.web.xyz@gmail.com
url = https://ari-web.xyz/gh/awc
description = wrapper for ari-web comments API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = http, http-client, comments, api, wrapper, https
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests
    types-requests
    furl
    pypika

[options.package_data]
* = *.typed

[bdist_wheel]
universal = 1
